# -*- mode: makefile -*-

######################################################################
# HAS Flags
######################################################################

HAS_SHARED=1
HAS_OCAML = 1
HAS_OCAMLOPT = 1
# HAS_CPP = 1
# HAS_PPL = 1
# HAS_LONG_DOUBLE = 1
# HAS_JAVA = 1

OCAMLFIND = ocamlfind

######################################################################
# Directories
######################################################################

APRON_PREFIX = $(PWD)/_build
MLGMPIDL_PREFIX = /tmp
JAVA_PREFIX = /tmp

GMP_PREFIX = /usr
MPFR_PREFIX = /usr
PPL_PREFIX = /usr
CAML_DIR = $(shell ocamlc -where)
CAMLIDL_DIR = $(shell $(OCAMLFIND) query camlidl)

######################################################################
# Java binaries and directories
######################################################################

JAVA      = java
JAVAC     = javac -Xlint:unchecked
JAVAH     = javah
JAVADOC   = javadoc
JAR       = jar
JNIINC    = -I/java/include

######################################################################
# Tools and Flags
######################################################################

#CC = gcc

# C compilation flags
CFLAGS = \
-Wcast-qual -Wswitch -Werror-implicit-function-declaration \
-Wall -Wextra -Wundef -Wbad-function-cast -Wcast-align -Wstrict-prototypes \
-Wno-unused \
-std=c99 -U__STRICT_ANSI__ \
-fPIC -O3 -DNDEBUG

# C compilation flags in debug (or profile) mode
CFLAGS_DEBUG = \
-Wcast-qual -Wswitch -Werror-implicit-function-declaration \
-Wall -Wextra -Wundef -Wbad-function-cast -Wcast-align -Wstrict-prototypes \
-Wno-unused \
-std=c99  -U__STRICT_ANSI__ \
-fPIC -g -O0 -UNDEBUG

# C compilation flags in profiling mode
CFLAGS_PROF = \
-Wcast-qual -Wswitch -Werror-implicit-function-declaration \
-Wall -Wextra -Wundef -Wbad-function-cast -Wcast-align -Wstrict-prototypes \
-Wno-unused \
-std=c99 \
-fPIC -O3 -DNDEBUG -g -pg

CXXFLAGS = \
-Wcast-qual -Wswitch \
-Wall -Wextra -Wundef -Wcast-align \
-Wno-unused \
-fPIC -O3 -DNDEBUG

CXXFLAGS_DEBUG = \
-Wcast-qual -Wswitch \
-Wall -Wextra -Wundef -Wcast-align \
-Wno-unused \
-fPIC -g -O0 -UNDEBUG

AR = ar
RANLIB = ranlib
SED = sed # version >=4.1.x required
M4 = m4
INSTALL = install
INSTALLd = install -d

OCAMLC = ocamlc.opt
OCAMLOPT = ocamlopt.opt

# ocamlc compilation flags
OCAMLFLAGS = -g
# ocamlopt compilation flags
OCAMLOPTFLAGS = -inline 20

OCAMLDEP = ocamldep
OCAMLLEX = ocamllex.opt
OCAMLYACC = ocamlyacc
OCAMLDOC = ocamldoc.opt
OCAMLMKTOP = ocamlmktop
OCAMLMKLIB = ocamlmklib

CAMLIDL = camlidl

LATEX=latex
DVIPDF=dvipdf
MAKEINDEX=makeindex
TEXI2DVI=texi2dvi
TEXI2HTML=texi2html
